--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
         </section>
 
     </main>
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
