--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <img src="img/logo.svg" alt="" class="header__logo">
+            <a href="" class="header__logo">            
+                <img src="img/logo.svg" alt="logo"></a>
             <nav class="header__left">
                 <nav class="header__nav">
                     <ul class="header nav__list">
